2007-08-28  Ben Motmans <ben.motmans@gmail.com> 

	* Widgets/DataGrid/DataGrid.cs: added a missing " char
	* gtk-gui/gui.stetic, Makefile.am, MonoDevelop.Database.Components.mdp: use
	  project references instead of assembly references

2007-08-28  Ben Motmans <ben.motmans@gmail.com> 

	* Widgets/DataGrid/DataGrid.cs, Widgets/SqlEditorWidget.cs,
	  MonoDevelop.Database.Components.addin.xml: updated addin paths
	* Makefile.am: updated makefile

2007-08-03  Ben Motmans <ben.motmans@gmail.com>

	* Widgets/SqlEditorWidget.cs: fixed the context menu

2007-08-02  Ben Motmans <ben.motmans@gmail.com>

	* Dialogs/DatabaseConnectionSettingsDialog.cs: make sure the database entry is always editable
	* Widgets/SelectColumnWidget.cs, Widgets/SortedColumnListStore.cs: moved the liststore into a 
	separate SortedColumnListStore class that can easily be reused
	* Widgets/DataGrid/DataGrid.cs: improved gchar workaround

	* Widgets/SelectColumnWidget.cs: added SingleMode property to force single selects

2007-08-01  Ben Motmans <ben.motmans@gmail.com>

	* Widgets/DataGrid/DataGrid.cs: Added workaround for chars in the liststore
	* Widgets/SqlEditorWidget.cs: Added a scrolledwindow
	* Widgets/SelectColumnWidget.cs: IsColumnChecked property to verify that at least
	1 column is selected
	* Dialogs/SelectColumnDialog.cs: SelectAll and DeselectAll buttons
	* Dialogs/WaitDialog.cs: Correctly draw the window border

2007-07-31  Ben Motmans <ben.motmans@gmail.com>

	* Widgets/SelectColumnWidget.cs: various bugfixes
	* Widgets/SqlEditorWidget.cs: Added a addin based context menu and added
	ExportToFile and ImportFromFile commands

2007-07-25  Ben Motmans <ben.motmans@gmail.com>

	* Dialogs/DatabaseConnectionSettingsDialog.cs: Various improvements and bugfixes
	* Commands/SqlEditorCommands.cs, Commands/DataGridCommands.cs: Commands
	* Dialogs/WaitDialog.cs: Dialog to alert the user of progress during a
	background operation