@@ -19,15 +19,15 @@
 	</Dependencies>
 	
 	<ExtensionPoint path = "/MonoDevelop/Database/DataGrid/Renderers">
-		<ExtensionNodeSet id="MonoDevelop.Core.Gui.ItemSet"/>
+		<ExtensionNodeSet id="MonoDevelop.Components.Commands.ItemSet"/>
 	</ExtensionPoint>
 	
 	<ExtensionPoint path = "/MonoDevelop/Database/ContextMenu/DataGrid">
-		<ExtensionNodeSet id="MonoDevelop.Core.Gui.ItemSet"/>
+		<ExtensionNodeSet id="MonoDevelop.Components.Commands.ItemSet"/>
 	</ExtensionPoint>
 	
 	<ExtensionPoint path = "/MonoDevelop/Database/ContextMenu/SqlEditor">
-		<ExtensionNodeSet id="MonoDevelop.Core.Gui.ItemSet"/>
+		<ExtensionNodeSet id="MonoDevelop.Components.Commands.ItemSet"/>
 	</ExtensionPoint>
 	
 	<Extension path = "/MonoDevelop/Ide/Commands">
