@@ -20,7 +20,7 @@
 	</Dependencies>
 	
 	<ExtensionPoint path = "/MonoDevelop/Database/ToolBar/SqlQueryView">
-		<ExtensionNodeSet id="MonoDevelop.Core.Gui.ItemSet"/>
+		<ExtensionNodeSet id="MonoDevelop.Components.Commands.ItemSet"/>
 	</ExtensionPoint>
 	
 	<Extension path = "/MonoDevelop/Ide/Commands">
