@@ -1,3 +1,7 @@
+2007-08-29  Ben Motmans <ben.motmans@gmail.com> 
+
+	* gtk-gui/gui.stetic: changes in auto generated code
+
 2007-08-28  Ben Motmans <ben.motmans@gmail.com> 
 
 	* Widgets/ConstraintsEditorWidget.cs: use correct parameters for
