@@ -1,3 +1,7 @@
+2007-08-29  Ben Motmans <ben.motmans@gmail.com> 
+
+	* MonoDevelop.Database.Query.addin.xml: use updated ExtensionNodeSet
+
 2007-08-28  Ben Motmans <ben.motmans@gmail.com> 
 
 	* Makefile.am, MonoDevelop.Database.Query.mdp: use project references
